--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Code Along for the [Prisma Quickstart](https://www.prisma.io/docs/getting-started/quickstart)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prisma-studio": "npx prisma studio"
   },
   "keywords": [],
   "author": "",
